--- a/Web/Yoga/contacts.html
+++ b/Web/Yoga/contacts.html
@@ -12,7 +12,13 @@
 
         </header>
         <nav>
-
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="classes.html">Classes</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="contacts.html">Contact</a></li>
+                <li><a href="store.html">Store</a></li>
+            </ul>
         </nav>
         <div id= "wrapper">
             <main>
