--- a/Web/Yoga/index.html
+++ b/Web/Yoga/index.html
@@ -19,6 +19,7 @@
                 <li><a href="classes.html">Classes</a></li>
                 <li><a href="schedule.html">Schedule</a></li>
                 <li><a href="contacts.html">Contact</a></li>
+                <li><a href="store.html">Store</a></li>
             </ul>
         </nav>
         <div id="wrapper">
